change readme regarding starting the app